--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -9,10 +9,14 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+      auto-index-creation: true
   websocket:
     # Enable WebSocket support
     enabled: true
 app:
-  service:
+  services:
     profile:
-      url: "http://localhost:8081/profile"
+      url: http://localhost:8081/profile
+
+    identity:
+      url: http://localhost:8080/identity
