--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "swiper": "^11.2.5",
     "web-vitals": "^4.2.4",
