--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -38,17 +38,17 @@ services:
       - ZOOKEEPER_CLIENT_PORT=2181
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: bitnami/kafka:3.9.0
     container_name: kafka
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
     ports:
       - "9092:9092"
     depends_on:
       - zookeeper
-    environment:
-      - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+
 
   redis:
     image: redis:alpine
