--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -7,6 +7,12 @@ server:
 spring:
   application:
     name: chat-service
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 50MB
+
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
