--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - "7687:7687"
     environment:
       - NEO4J_AUTH=neo4j/12345678
-    volumes:
-      - neo4j_data:/data
+
+
 
   mysql:
     image: mysql:8.0
@@ -23,8 +23,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
 
-    volumes:
-      - mysql_data:/var/lib/mysql
 
   mongo:
     image: mongo:6.0
@@ -34,8 +32,6 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
-    volumes:
-      - mongo_data:/data/db
 
   redis:
     image: redis:alpine
@@ -63,18 +59,13 @@ services:
     ports:
       - "9092:9092"
     environment:
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEX
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_LOG_RETENTION_HOURS: 24
       KAFKA_DELETE_TOPIC_ENABLE: "true"
 
-
-# ====================
-volumes:
-  neo4j_data:
-  mysql_data:
-  mongo_data:
