--- a/Backend/post-service/pom.xml
+++ b/Backend/post-service/pom.xml
@@ -38,7 +38,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- Post Service pom.xml -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
