--- a/Backend/ai-service/pom.xml
+++ b/Backend/ai-service/pom.xml
@@ -23,16 +23,23 @@
 	</properties>
 
 	<dependencies>
-		<!-- Spring Boot Starter Web -->
+
+		<!-- Web (REST API) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Spring Boot Starter Validation -->
+		<!-- Validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- MongoDB (bắt buộc để lưu chat history) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
 		<!-- Lombok -->
@@ -42,20 +49,24 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Spring Boot Starter Test -->
+		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
-		<!-- OpenAI Java Client (hoặc thư viện AI khác) -->
+		<!-- Nếu bạn gọi Gemini qua REST như hiện tại → KHÔNG cần OpenAI client -->
+		<!-- Nhưng nếu bạn muốn giữ lại để sau này gọi OpenAI thì giữ -->
+		<!-- Không bắt buộc -->
 		<dependency>
 			<groupId>com.theokanning.openai-gpt3-java</groupId>
 			<artifactId>service</artifactId>
 			<version>0.18.2</version>
 		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
