--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -15,10 +15,10 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+      uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/chat-service?authSource=admin}
       auto-index-creation: true
     redis:
-      host: localhost
+      host: ${REDIS_HOST:localhost}
       port: 6379
       timeout: 2000ms
       lettuce:
@@ -40,11 +40,11 @@ spring:
 app:
   services:
     profile:
-      url: http://localhost:8081/profile
+      url: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
     identity:
-      url: http://localhost:8080/identity
+      url: ${IDENTITY_SERVICE_URL:http://localhost:8080/identity}
     ai:
-      url: http://localhost:9090
+      url: ${AI_SERVICE_URL:http://localhost:9090}
   call:
     ring-timeout: 60 #seconds
     max-duration: 3600
